[gd_scene load_steps=6 format=2]

[ext_resource path="res://VictoryMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu Box.png" type="Texture" id=2]
[ext_resource path="res://assets/Nunito-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 1
outline_color = Color( 0.352478, 0.421786, 0.585938, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 24
outline_color = Color( 0.352941, 0.427451, 0.6, 1 )
use_mipmaps = true
extra_spacing_char = 4
font_data = ExtResource( 3 )

[node name="VictoryMenu" type="PopupPanel"]
pause_mode = 2
margin_left = -11.4157
margin_top = -12.1291
margin_right = -3.41566
margin_bottom = -4.12914
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 506.892, 301.66 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 195, 56, 2524, 1927 )

[node name="TextItems" type="Node2D" parent="."]

[node name="MenuLabel" type="Label" parent="TextItems"]
light_mask = 0
margin_left = 318.937
margin_top = 196.838
margin_right = 700.937
margin_bottom = 223.838
grow_horizontal = 2
mouse_filter = 1
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "PLAYER X WINS!"
align = 1
valign = 1

[node name="NewGameButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 359.116
margin_top = 256.733
margin_right = 657.115
margin_bottom = 304.733
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "NEW GAME"

[node name="ExitToOpeningButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 346.421
margin_top = 307.813
margin_right = 667.422
margin_bottom = 355.813
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "EXIT TO MAIN MENU"

[node name="QuitButton" type="ToolButton" parent="TextItems"]
pause_mode = 2
margin_left = 416.08
margin_top = 358.48
margin_right = 596.081
margin_bottom = 406.48
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.796078, 0.823529, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.482353, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT GAME"

[connection signal="pressed" from="TextItems/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TextItems/ExitToOpeningButton" to="." method="_on_ExitToOpeningButton_pressed"]
[connection signal="pressed" from="TextItems/QuitButton" to="." method="_on_QuitButton_pressed"]
